feat: starting work on heroDiagram component

--- a/docs/.vitepress/theme/custom.scss
+++ b/docs/.vitepress/theme/custom.scss
@@ -1,4 +1,6 @@
 .landing {
+  overflow-x: hidden;
+
   .VPNavBarAppearance {
     display: none;
   }
@@ -24,23 +26,24 @@
     }
 
     &.btn--primary {
+      position: relative;
       background: radial-gradient(
           141.42% 141.42% at 100% 0%,
           rgba(255, 255, 255, 0.5) 0%,
           rgba(255, 255, 255, 0) 100%
-        ),
-        radial-gradient(
+      ),
+      radial-gradient(
           140.35% 140.35% at 100% 94.74%,
           #bd34fe 0%,
           rgba(189, 52, 254, 0) 100%
-        ),
-        radial-gradient(
+      ),
+      radial-gradient(
           89.94% 89.94% at 18.42% 15.79%,
           #41d1ff 0%,
           rgba(65, 209, 255, 0) 100%
-        ),
-        linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%),
-        rgba(255, 255, 255, 0.2);
+      ),
+      linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%),
+      rgba(255, 255, 255, 0.2);
       box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.75) inset;
 
       &:hover {
@@ -48,19 +51,19 @@
             141.42% 141.42% at 100% 0%,
             rgba(255, 255, 255, 0.5) 0%,
             rgba(255, 255, 255, 0) 100%
-          ),
-          radial-gradient(
+        ),
+        radial-gradient(
             140.35% 140.35% at 100% 94.74%,
             #bd34fe 0%,
             rgba(189, 52, 254, 0) 100%
-          ),
-          radial-gradient(
+        ),
+        radial-gradient(
             89.94% 89.94% at 18.42% 15.79%,
             #41d1ff 0%,
             rgba(65, 209, 255, 0) 100%
-          ),
-          linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%),
-          rgba(255, 255, 255, 0.5);
+        ),
+        linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%),
+        rgba(255, 255, 255, 0.5);
         box-shadow: 0 1.5px 0 0 rgba(255, 255, 255, 0.8) inset;
       }
     }
