feat: forced dark mode on the landing page, w/ minor visual clean-up

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -5,6 +5,14 @@
     display: none;
   }
 
+  .VPNavScreenAppearance {
+    visibility: hidden;
+  }
+
+  .social-links::before {
+    margin-left: 0 !important;
+  }
+
   .btn {
     display: flex;
     padding: 10px 18px;
