--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,6 +1,10 @@
 .landing {
   overflow-x: hidden;
 
+  /* /////////////// */
+  /* Force Dark Mode */
+  /* /////////////// */
+
   .VPNavBarAppearance {
     display: none;
   }
@@ -11,6 +15,72 @@
 
   .social-links::before {
     margin-left: 0 !important;
+  }
+
+  /* ////////// */
+  /* Typography */
+  /* ////////// */
+
+  h1 {
+    text-align: center;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    background: linear-gradient(
+      180deg,
+      #fff 0%,
+      rgba(255, 255, 255, 0.31) 100%
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-wrap: balance;
+    cursor: default;
+    font-size: 44px;
+    line-height: 120%;
+    letter-spacing: -0.88px;
+    padding: 0 16px;
+    margin-bottom: 15px;
+
+    @media (min-width: 768px) {
+      font-size: 64px;
+      line-height: 81px;
+      letter-spacing: -1.28px;
+    }
+
+    @media (min-width: 1025px) {
+      font-size: 72px;
+      letter-spacing: -1.44px;
+      padding-bottom: 8px; /* Fix for hanging descender on "g" in "tooling" */
+    }
+  }
+
+  h2 {
+    display: block;
+    width: fit-content;
+    font-family: Manrope, sans-serif;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.88px;
+    cursor: default;
+    text-wrap: balance;
+  }
+
+  h3 {
+    color: #a3a3a3;
+    text-align: center;
+    font-family: Inter, sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: -0.4px;
+    max-width: 500px;
+    text-wrap: balance;
+    cursor: default;
+    margin-bottom: 25px;
   }
 
   .btn {
