--- a/docs/.vitepress/theme/styles/custom.css
+++ b/docs/.vitepress/theme/styles/custom.css
@@ -7,6 +7,17 @@ html:has(.landing) {
 .landing {
   overflow-x: hidden;
 
+  .VPNavBar,
+  .VPNavBar:not(.top) {
+    border-bottom: 1px solid #262626 !important;
+    background: rgba(23, 23, 23, 0.8) !important;
+    backdrop-filter: blur(10px);
+
+    .content-body {
+      background: none !important;
+    }
+  }
+
   /* /////////////// */
   /* Force Dark Mode */
   /* /////////////// */
