chore: minor refactoring and visual improvements

--- a/docs/.vitepress/theme/styles/landing.css
+++ b/docs/.vitepress/theme/styles/landing.css
@@ -20,6 +20,10 @@ html:has(.landing) {
     }
   }
 
+  .VPHome {
+    padding-bottom: 0 !important;
+  }
+
   /* /////////////// */
   /* Force Dark Mode */
   /* /////////////// */
