fix: set a background color for the landing class

--- a/docs/.vitepress/theme/styles/landing.css
+++ b/docs/.vitepress/theme/styles/landing.css
@@ -13,6 +13,7 @@ html:has(.landing) {
 
 .landing {
   overflow-x: hidden;
+  background-color: #101010;
 
   * {
     -webkit-font-smoothing: antialiased !important;
